mac content: use IMEs for password inputs

Not using an IME here makes certain keyboard layouts very difficult to use.

Bug: 895434
Change-Id: I76e6121ca6512c8804fdb4afd2bceba10160bef0
Reviewed-on: https://chromium-review.googlesource.com/c/1351151
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611739}
Former-commit-id: 3ec55a05f5fb5252442fee0c12d9e732bc7aeae2